--- a/package.json
+++ b/package.json
@@ -6,20 +6,29 @@
   "private": true,
   "scripts": {
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prettify": "prettier \"**/*.js\" --write",
+    "lint": "eslint ./ --fix"
   },
   "author": "Jeremy Tenjo",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.15.5",
+    "@babel/eslint-parser": "^7.15.4",
     "@storybook/addon-actions": "^6.3.8",
     "@storybook/addon-essentials": "^6.3.8",
     "@storybook/addon-links": "^6.3.8",
     "@storybook/react": "^6.3.8",
     "babel-loader": "^8.2.2",
-    "lerna": "^4.0.0"
-  },
-  "dependencies": {
+    "eslint": "^7.26.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "lerna": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
