--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,9 @@
 {
   "packages": ["packages/**"],
-  "version": "independent"
+  "version": "independent",
+  "hoist": true,
+  "stream": true,
+  "bootstrap": {
+    "npmClientArgs": ["--no-package-lock"]
+  }
 }
