--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@useweb/button",
   "version": "0.0.2",
-  "main": "build/index.js",
+  "main": "./build/index.js",
   "scripts": {
-    "build": "esbuild src/index.jsx --bundle --minify --outfile=build/index.js"
+    "build": "esbuild src/index.jsx --bundle --minify --outfile=build/index.js",
+    "prepublish": "npm run build",
+    "deploy": "npm publish --access public"
   },
   "devDependencies": {
     "esbuild": "^0.12.26"
   },
   "dependencies": {
-    "@useweb/use-event-listener": "^0.0.2"
+    "@useweb/use-event-listener": "^0.0.1"
   }
 }
