--- a/packages/dom/useEventListener/package.json
+++ b/packages/dom/useEventListener/package.json
@@ -1,11 +1,18 @@
 {
   "name": "@useweb/use-event-listener",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "./build/index.js",
+  "author": "Jeremy Tenjo",
+  "files": [
+    "build"
+  ],
   "scripts": {
-    "build": "esbuild src/index.js --bundle --minify --outfile=build/index.js",
+    "build": "node ./scripts/build",
     "prepublish": "npm run build",
     "deploy": "npm publish --access public"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0"
   },
   "devDependencies": {
     "esbuild": "^0.12.26"
