--- a/packages/dom/useEventListener/package.json
+++ b/packages/dom/useEventListener/package.json
@@ -7,8 +7,8 @@
     "build"
   ],
   "scripts": {
-    "build": "node ./scripts/compile",
-    "build:watch": "node ./scripts/compile --watch",
+    "build": "node ./node_modules/@useweb/compiler/build",
+    "build:watch": "node ./node_modules/@useweb/compiler/build --watch",
     "prepublish": "npm run build",
     "deploy": "npm publish --access public"
   },
@@ -16,7 +16,6 @@
     "react": "^17.0.0"
   },
   "devDependencies": {
-    "esbuild": "^0.12.26",
-    "command-line-args": "^5.2.0"
+    "@useweb/compiler": "0.0.1"
   }
 }
