--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "lerna": "^4.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "shelljs": "^0.8.4"
+    "react-dom": "^17.0.2"
   }
 }
