--- a/packages/utils/array/arrayDB/package.json
+++ b/packages/utils/array/arrayDB/package.json
@@ -10,9 +10,9 @@
     "build": "node ./node_modules/@useweb/compiler/build",
     "build:watch": "node ./node_modules/@useweb/compiler/build --watch",
     "prepublish": "npm run build",
-    "deploy": "npm publish --access public"
+    "deploy": "npm run build && npm publish --access public"
   },
   "devDependencies": {
-    "@useweb/compiler": "0.0.2"
+    "@useweb/compiler": "0.0.3"
   }
 }
