--- a/packages/data/useAsync/package.json
+++ b/packages/data/useAsync/package.json
@@ -10,12 +10,12 @@
     "build": "node ./node_modules/@useweb/compiler/build",
     "build:watch": "node ./node_modules/@useweb/compiler/build --watch",
     "prepublish": "npm run build",
-    "deploy": "npm publish --access public"
+    "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
     "react": "^17.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "0.0.2"
+    "@useweb/compiler": "0.0.3"
   }
 }
