--- a/packages/dataDisplay/Box/package.json
+++ b/packages/dataDisplay/Box/package.json
@@ -1,23 +1,23 @@
 {
   "name": "@useweb/box",
-  "version": "0.1.1",
+  "version": "0.1.5",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "files": [
     "build"
   ],
   "scripts": {
-    "build": "node ./node_modules/@useweb/compiler/build --jsx",
+    "build": "node ./node_modules/@useweb/compiler/build --jsx --format cjs",
     "build:watch": "node ./node_modules/@useweb/compiler/build --watch",
     "prepublish": "npm run build",
-    "deploy": "npm publish --access public"
+    "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
     "react": "^17.0.0",
-    "@useweb/style-system": "^0.1.0",
+    "@useweb/style-system": "^0.1.3",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@useweb/compiler": "0.0.2"
+    "@useweb/compiler": "0.0.3"
   }
 }
