--- a/packages/theme/styleSystem/package.json
+++ b/packages/theme/styleSystem/package.json
@@ -1,23 +1,23 @@
 {
   "name": "@useweb/style-system",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "files": [
     "build"
   ],
   "scripts": {
-    "build": "node ./node_modules/@useweb/compiler/build",
+    "build": "node ./node_modules/@useweb/compiler/build --format cjs",
     "build:watch": "node ./node_modules/@useweb/compiler/build --watch",
     "prepublish": "npm run build",
-    "deploy": "npm publish --access public"
+    "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
     "react": "^17.0.0",
-    "@useweb/remove-duplicates-from-array": "^0.1.0",
-    "@useweb/decamelize": "^0.1.0"
+    "@useweb/remove-duplicates-from-array": "^0.1.1",
+    "@useweb/decamelize": "^0.1.1"
   },
   "devDependencies": {
-    "@useweb/compiler": "0.0.2"
+    "@useweb/compiler": "0.0.3"
   }
 }
