--- a/packages/devtools/compiler/package.json
+++ b/packages/devtools/compiler/package.json
@@ -13,8 +13,10 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "dependencies": {
+    "command-line-args": "^5.2.0",
     "esbuild": "^0.12.26",
-    "command-line-args": "^5.2.0"
+    "glob": "^7.2.0",
+    "typescript": "^4.4.4"
   },
   "peerDependencies": {
     "esbuild": "^0.12.26"
