--- a/packages/navigation/utils/scrollIntoView/package.json
+++ b/packages/navigation/utils/scrollIntoView/package.json
@@ -1,18 +1,21 @@
 {
   "name": "@useweb/scroll-into-view",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
+  "types": "./build/types/index.d.ts",
   "files": [
     "build"
   ],
   "scripts": {
     "build": "node ./node_modules/@useweb/compiler/build",
     "build:watch": "node ./node_modules/@useweb/compiler/build --watch",
+    "build:types": "rm -rf ./build/types && tsc",
     "prepublish": "npm run build",
     "deploy": "npm run build && npm publish --access public"
   },
   "devDependencies": {
+    "typescript": "^4.4.4",
     "@useweb/compiler": "0.0.3"
   }
 }
