--- a/packages/utils/array/functions/removeDuplicatesFromArray/package.json
+++ b/packages/utils/array/functions/removeDuplicatesFromArray/package.json
@@ -7,7 +7,7 @@
     "build"
   ],
   "scripts": {
-    "build": "node ./node_modules/@useweb/compiler/build --format cjs",
+    "build": "node ./node_modules/@useweb/compiler/build",
     "build:watch": "node ./node_modules/@useweb/compiler/build --watch",
     "prepublish": "npm run build",
     "deploy": "npm run build && npm publish --access public"
