--- a/packages/ambient/Particles/package.json
+++ b/packages/ambient/Particles/package.json
@@ -7,7 +7,7 @@
     "build"
   ],
   "scripts": {
-    "build": "node ./node_modules/@useweb/compiler/build --jsx ",
+    "build": "node ./node_modules/@useweb/compiler/build ",
     "build:watch": "node ./node_modules/@useweb/compiler/build --watch",
     "prepublish": "npm run build",
     "deploy": "npm run build && npm publish --access public"
