--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -6,8 +6,8 @@
     "build"
   ],
   "scripts": {
-    "build": "node ./node_modules/@useweb/compiler/build --jsx",
-    "build:watch": "node ./node_modules/@useweb/compiler/build --jsx --watch",
+    "build": "node ./node_modules/@useweb/compiler/build",
+    "build:watch": "node ./node_modules/@useweb/compiler/build --watch",
     "prepublish": "npm run build",
     "deploy": "npm run build && npm publish --access public"
   },
