--- a/packages/data/useAsync/package.json
+++ b/packages/data/useAsync/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
+  "types": "./build/types/index.d.ts",
   "files": [
     "build"
   ],
