--- a/packages/utils/array/functions/removeDuplicatesFromArray/package.json
+++ b/packages/utils/array/functions/removeDuplicatesFromArray/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.1",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
+  "types": "./build/types/index.d.ts",
   "files": [
     "build"
   ],
