--- a/packages/dataDisplay/Icon/package.json
+++ b/packages/dataDisplay/Icon/package.json
@@ -14,9 +14,11 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
-    "react": "^17.0.0"
+    "react": "^17.0.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@useweb/compiler": "1.0.0"
+    "@useweb/compiler": "1.0.0",
+    "styled-components": "^5.3.3"
   }
 }
