--- a/packages/dataDisplay/Box/package.json
+++ b/packages/dataDisplay/Box/package.json
@@ -19,6 +19,8 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@useweb/compiler": "1.0.0"
+    "@useweb/compiler": "1.0.0",
+    "@useweb/style-system": "^0.1.3",
+    "styled-components": "^5.3.3"
   }
 }
