--- a/packages/devtools/compiler/package.json
+++ b/packages/devtools/compiler/package.json
@@ -12,14 +12,17 @@
     "prepublish": "npm run build",
     "deploy": "npm run build && npm publish --access public"
   },
+  "peerDependencies": {
+    "esbuild": "^0.12.26",
+    "typescript": "^4.4.4"
+  },
   "dependencies": {
     "command-line-args": "^5.2.0",
     "concurrently": "^6.4.0",
     "esbuild": "^0.12.26",
-    "glob": "^7.2.0",
-    "typescript": "^4.4.4"
+    "glob": "^7.2.0"
   },
-  "peerDependencies": {
-    "esbuild": "^0.12.26"
+  "devDependencies": {
+    "typescript": "^4.4.4"
   }
 }
