--- a/packages/dataDisplay/IconSpecial/SrollBackToTopIcon/package.json
+++ b/packages/dataDisplay/IconSpecial/SrollBackToTopIcon/package.json
@@ -20,9 +20,9 @@
     "@useweb/animate": "^1.0.0"
   },
   "devDependencies": {
+    "@useweb/animate": "^1.0.0",
     "@useweb/compiler": "1.1.0",
-    "@useweb/use-event-listener": "^0.1.0",
     "@useweb/icon": "0.0.1",
-    "@useweb/animate": "^1.0.0"
+    "@useweb/use-event-listener": "^0.1.0"
   }
 }
