--- a/packages/media/images/Image/package.json
+++ b/packages/media/images/Image/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@useweb/compiler": "1.1.1",
     "@useweb/style-system": "^0.1.3",
+    "image-compressor.js": "^1.1.4",
     "styled-components": "^5.3.3"
   }
 }
