--- a/packages/media/images/Image/package.json
+++ b/packages/media/images/Image/package.json
@@ -16,7 +16,8 @@
   "peerDependencies": {
     "react": "^17.0.0",
     "@useweb/style-system": "^0.1.3",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "image-compressor.js": "^1.1.4"
   },
   "devDependencies": {
     "@useweb/compiler": "1.1.1",
