--- a/packages/media/images/Image/package.json
+++ b/packages/media/images/Image/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "build": "node ./node_modules/@useweb/compiler/build",
     "build:watch": "node ./node_modules/@useweb/compiler/build --watch",
-    "prepublish": "npm run build",
-    "deploy": "npm run build && npm publish --access public"
+    "publish": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
     "react": "^17.0.0",
