--- a/packages/feedback/Modal/package.json
+++ b/packages/feedback/Modal/package.json
@@ -17,9 +17,9 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@useweb/animate": "^1.0.1",
     "@useweb/compiler": "1.1.3",
-    "styled-components": "^5.3.3",
-    "@useweb/animate": "^1.0.0",
-    "@useweb/overlay": "^1.0.0"
+    "@useweb/overlay": "^1.0.1",
+    "styled-components": "^5.3.3"
   }
 }
