--- a/packages/feedback/Modal/package.json
+++ b/packages/feedback/Modal/package.json
@@ -20,6 +20,8 @@
     "@useweb/animate": "^1.0.1",
     "@useweb/compiler": "1.1.3",
     "@useweb/overlay": "^1.0.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "@useweb/remove-duplicates-from-array": "^0.1.1",
+    "@useweb/decamelize": "^0.1.1"
   }
 }
