--- a/packages/theme/styleSystem/package.json
+++ b/packages/theme/styleSystem/package.json
@@ -18,6 +18,8 @@
     "@useweb/decamelize": "^0.1.1"
   },
   "devDependencies": {
-    "@useweb/compiler": "1.1.3"
+    "@useweb/compiler": "1.1.3",
+    "@useweb/remove-duplicates-from-array": "^0.1.1",
+    "@useweb/decamelize": "^0.1.1"
   }
 }
