--- a/packages/dataDisplay/Carousel/package.json
+++ b/packages/dataDisplay/Carousel/package.json
@@ -18,6 +18,12 @@
   "devDependencies": {
     "@useweb/box": "^1.1.0",
     "@useweb/compiler": "1.1.4",
-    "react-swipeable-views": "^0.14.0"
+    "@useweb/decamelize": "^0.1.1",
+    "@useweb/icon": "0.0.1",
+    "@useweb/remove-duplicates-from-array": "^0.1.1",
+    "@useweb/style-system": "^0.1.3",
+    "@useweb/use-key-press": "^1.0.0",
+    "react-swipeable-views": "^0.14.0",
+    "styled-components": "^5.3.3"
   }
 }
