--- a/packages/dataDisplay/Text/package.json
+++ b/packages/dataDisplay/Text/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/text",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -13,11 +13,13 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
-    "react": "^17.0.0",
-    "@useweb/style-system": "^0.1.3",
-    "styled-components": "^5.3.3"
+    "react": "^17.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "1.1.4"
+    "@useweb/compiler": "1.1.4",
+    "@useweb/decamelize": "^0.1.1",
+    "@useweb/remove-duplicates-from-array": "^0.1.1",
+    "@useweb/style-system": "^0.1.3",
+    "styled-components": "^5.3.3"
   }
 }
