--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "description": "Tools to build apps with web technologies",
   "private": true,
+  "type": "module",
   "main": "index.js",
   "author": "Jeremy Tenjo",
   "license": "ISC",
   "scripts": {
     "dev": "start-storybook -p 6008",
+    "dev:storybook": "start-storybook -c ./devtools/storybook -p 6007 --quiet --ci",
     "lerna:bootstrap": "lerna bootstrap",
     "lerna:version": "lerna version",
     "lerna:link": "lerna link",
-    "storybook:build": "build-storybook -o ./.storybook/build",
+    "build:storybook": "build-storybook -o ./.storybook/build",
     "prettify": "prettier --write '{**/*,*}.{js,jsx,json}'",
     "lint": "eslint ./ --fix"
   },
@@ -23,6 +25,7 @@
     "@storybook/addon-links": "^6.3.8",
     "@storybook/react": "^6.3.8",
     "babel-loader": "^8.2.2",
+    "dotenv-parse-variables": "^2.0.0",
     "eslint": "^7.26.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-cypress": "^2.11.3",
