--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Tools to build apps with web technologies",
   "private": true,
-  "type": "module",
   "main": "index.js",
   "author": "Jeremy Tenjo",
   "license": "ISC",
@@ -12,9 +11,11 @@
     "lerna:bootstrap": "lerna bootstrap",
     "lerna:version": "lerna version",
     "lerna:link": "lerna link",
-    "build:storybook": "build-storybook -o ./.storybook/build",
+    "build:storybook": "build-storybook -o ./devtools/storybook/build",
     "prettify": "prettier --write '{**/*,*}.{js,jsx,json}'",
-    "lint": "eslint ./ --fix"
+    "lint": "eslint ./ --fix",
+    "storybook": "start-storybook -p 6007",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@babel/core": "^7.15.5",
