--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "lerna:link": "lerna link",
     "build:storybook": "build-storybook -o ./devtools/storybook/build",
     "prettify": "prettier --write '{**/*,*}.{js,jsx,json}'",
-    "lint": "eslint ./ --fix",
-    "storybook": "start-storybook -p 6007",
-    "build-storybook": "build-storybook"
+    "lint": "eslint ./ --fix"
   },
   "dependencies": {
     "@babel/core": "^7.15.5",
