--- a/packages/feedback/Modal/package.json
+++ b/packages/feedback/Modal/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@useweb/overlay",
-  "version": "1.0.2",
+  "name": "@useweb/modal",
+  "version": "1.0.1",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -14,14 +14,18 @@
   },
   "peerDependencies": {
     "react": "^17.0.0",
-    "@useweb/animate": "^1.0.0",
-    "@useweb/box": "^1.1.0",
-    "@useweb/prevent-body-scroll": "^1.0.0"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@useweb/compiler": "1.1.4",
-    "@useweb/animate": "^1.0.0",
+    "@useweb/animate": "^1.0.1",
     "@useweb/box": "^1.1.0",
-    "@useweb/prevent-body-scroll": "^1.0.0"
+    "@useweb/compiler": "1.1.4",
+    "@useweb/decamelize": "^0.1.1",
+    "@useweb/on-swipe": "^1.0.0",
+    "@useweb/overlay": "^1.0.1",
+    "@useweb/prevent-body-scroll": "^1.0.0",
+    "@useweb/remove-duplicates-from-array": "^0.1.1",
+    "@useweb/style-system": "^0.1.3",
+    "styled-components": "^5.3.3"
   }
 }
