--- a/packages/utils/Animation/Animate/package.json
+++ b/packages/utils/Animation/Animate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/animate",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -13,8 +13,7 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
-    "react": "^17.0.0",
-    "@useweb/on-swipe": "^1.0.0"
+    "react": "^17.0.0"
   },
   "devDependencies": {
     "@useweb/compiler": "1.1.4",
