--- a/packages/utils/overlay/package.json
+++ b/packages/utils/overlay/package.json
@@ -16,12 +16,14 @@
     "react": "^17.0.0",
     "@useweb/animate": "^1.0.0",
     "@useweb/box": "^1.1.0",
-    "@useweb/prevent-body-scroll": "^1.0.0"
+    "@useweb/prevent-body-scroll": "^1.0.0",
+    "@useweb/use-event-listener": "^0.1.2"
   },
   "devDependencies": {
-    "@useweb/compiler": "1.1.4",
     "@useweb/animate": "^1.0.0",
     "@useweb/box": "^1.1.0",
-    "@useweb/prevent-body-scroll": "^1.0.0"
+    "@useweb/compiler": "1.1.4",
+    "@useweb/prevent-body-scroll": "^1.0.0",
+    "@useweb/use-event-listener": "^0.1.2"
   }
 }
