--- a/packages/feedback/Modal/package.json
+++ b/packages/feedback/Modal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/modal",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -25,6 +25,7 @@
     "@useweb/overlay": "^1.0.1",
     "@useweb/prevent-body-scroll": "^1.0.0",
     "@useweb/remove-duplicates-from-array": "^0.1.1",
+    "@useweb/use-event-listener": "^0.1.3",
     "@useweb/style-system": "^0.1.3",
     "styled-components": "^5.3.3"
   }
