--- a/packages/dataDisplay/Carousel/package.json
+++ b/packages/dataDisplay/Carousel/package.json
@@ -22,6 +22,7 @@
     "@useweb/icon": "0.0.1",
     "@useweb/remove-duplicates-from-array": "^0.1.1",
     "@useweb/style-system": "^0.1.3",
+    "@useweb/image": "^2.0.0",
     "@useweb/use-key-press": "^1.0.0",
     "react-swipeable-views": "^0.14.0",
     "styled-components": "^5.3.3"
