--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
   "author": "Jeremy Tenjo",
   "license": "ISC",
   "scripts": {
-    "dev:storybook": "start-storybook -c ./devtools/storybook -p 6007 --quiet --ci",
+    "dev": "start-storybook -c ./devtools/storybook -p 6007 --quiet --ci",
     "lerna:bootstrap": "lerna bootstrap",
     "lerna:version": "lerna version",
     "lerna:link": "lerna link",
     "build:storybook": "build-storybook -o ./devtools/storybook/build",
-    "prettify": "prettier --write '{**/*,*}.{js,jsx,json}'",
+    "prettify": "prettier --write '{**/*,*}.{js,jsx,json,ts,tsx}'",
     "lint": "eslint ./ --fix"
   },
   "dependencies": {
     "@babel/core": "^7.15.5",
     "@babel/eslint-parser": "^7.15.4",
-    "@storybook/addon-actions": "^6.3.12",
-    "@storybook/addon-essentials": "^6.3.12",
-    "@storybook/addon-links": "^6.3.12",
-    "@storybook/react": "^6.3.12",
+    "@storybook/addon-actions": "^6.4.0",
+    "@storybook/addon-essentials": "^6.4.0",
+    "@storybook/addon-links": "^6.4.0",
+    "@storybook/react": "^6.4.0",
     "babel-loader": "^8.2.2",
     "dotenv-parse-variables": "^2.0.0",
     "eslint": "^7.26.0",
