--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "Tools to build apps with web technologies",
   "private": true,
-  "main": "index.js",
+  "type": "module",
   "author": "Jeremy Tenjo",
   "license": "ISC",
   "scripts": {
-    "dev": "start-storybook -c ./devtools/storybook -p 6007 --quiet --ci",
+    "dev": "node --loader ts-node/esm  ./scripts/dev/index.ts",
+    "dev:storyoo": "start-storybook -c ./devtools/storybook -p 6007 --quiet --ci --no-manager-cache --modern",
     "lerna:bootstrap": "lerna bootstrap",
     "lerna:version": "lerna version",
     "lerna:link": "lerna link",
@@ -35,5 +36,13 @@
     "lerna": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "concurrently": "^6.4.0",
+    "fs-extra": "^10.0.0",
+    "glob": "^7.2.0",
+    "styled-components": "^5.3.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2"
   }
 }
