--- a/packages/dataDisplay/Carousel/package.json
+++ b/packages/dataDisplay/Carousel/package.json
@@ -24,6 +24,7 @@
     "@useweb/style-system": "^0.1.3",
     "@useweb/use-key-press": "^1.0.0",
     "react-swipeable-views": "^0.14.0",
+    "swiper": "^7.3.1",
     "styled-components": "^5.3.3"
   }
 }
