--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
   "license": "ISC",
   "scripts": {
     "dev": "node --loader ts-node/esm ./scripts/dev/index.ts",
-    "lerna:bootstrap": "lerna bootstrap",
-    "lerna:version": "lerna version",
+    "storybook:refresh-storiesList": "node --loader ts-node/esm ./scripts/dev/index.ts --refresh-stories-list",
     "lerna:link": "lerna link",
-    "build:storybook": "build-storybook -o ./devtools/storybook/build",
+    "storybook:build": "build-storybook -o ./devtools/storybook/build",
     "prettify": "prettier --write '{**/*,*}.{js,jsx,json,ts,tsx}'",
     "lint": "eslint ./ --fix"
   },
@@ -37,6 +36,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "command-line-args": "^5.2.0",
     "concurrently": "^6.4.0",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
