--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "useweb",
   "version": "1.0.0",
-  "description": "A component and utility library to speed up app developments",
+  "description": "A component and utility library to speed up app development",
   "private": true,
   "type": "module",
   "author": "Jeremy Tenjo",
   "license": "ISC",
   "scripts": {
-    "dev": "node --loader ts-node/esm ./scripts/dev/index.ts",
-    "dev:refresh-storiesList": "node --loader ts-node/esm ./scripts/dev/index.ts --refresh-stories-list",
+    "dev": "node --loader ts-node/esm ./scripts/dev/dev.ts",
+    "dev:refresh-storiesList": "node --loader ts-node/esm ./scripts/dev/dev.ts --refresh-stories-list",
     "lerna:link": "lerna link",
     "storybook:build": "build-storybook -o ./devtools/storybook/build",
     "prettify": "prettier --write '{**/*,*}.{js,jsx,json,ts,tsx}'",
@@ -17,10 +17,10 @@
   "dependencies": {
     "@babel/core": "^7.15.5",
     "@babel/eslint-parser": "^7.15.4",
-    "@storybook/addon-actions": "^6.4.0",
-    "@storybook/addon-essentials": "^6.4.0",
-    "@storybook/addon-links": "^6.4.0",
-    "@storybook/react": "^6.4.0",
+    "@storybook/addon-actions": "^6.4.4",
+    "@storybook/addon-essentials": "^6.4.4",
+    "@storybook/addon-links": "^6.4.4",
+    "@storybook/react": "^6.4.4",
     "babel-loader": "^8.2.2",
     "dotenv-parse-variables": "^2.0.0",
     "eslint": "^7.26.0",
