--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:refresh-storiesList": "node --loader ts-node/esm ./scripts/dev/dev.ts --refresh-stories-list",
     "lerna:link": "lerna link",
     "deploy": "node --loader ts-node/esm ./scripts/deploy/deploy.ts",
-    "prettify": "prettier --write '{**/*,*}.{js,jsx,json,ts,tsx}'",
+    "prettify": "prettier --write '{**/*,*}.{js,jsx,json,ts,tsx}' --config ./devtools/prettier/prettierConfig.cjs",
     "lint": "eslint ./ --fix"
   },
   "dependencies": {
