--- a/devtools/storybook/public/manifest.json
+++ b/devtools/storybook/public/manifest.json
@@ -3,12 +3,12 @@
   "name": "useweb",
   "icons": [
     {
-      "src": "logo-192.png",
+      "src": "images/logo-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo-512.png",
+      "src": "images/logo-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
