added run sripts

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "author": "Jeremy Tenjo",
   "license": "ISC",
   "scripts": {
-    "dev": "node --loader ts-node/esm ./scripts/dev/dev.ts",
-    "dev:refresh-storiesList": "node --loader ts-node/esm ./scripts/dev/dev.ts --refresh-stories-list",
+    "dev": "node --loader ts-node/esm ./scripts/dev/run.ts",
+    "dev:refresh-storiesList": "node --loader ts-node/esm ./scripts/dev/run.ts --refresh-stories-list",
     "build": "node --loader ts-node/esm ./scripts/buildApp/run.ts",
     "lerna:link": "lerna link",
-    "deploy": "node --loader ts-node/esm ./scripts/deploy/deploy.ts",
+    "deploy": "node --loader ts-node/esm ./scripts/deploy/run.ts",
     "prettify": "node --loader  ts-node/esm ./devtools/prettier/scripts/runPrettier/runPrettier.ts",
     "lint": "eslint ./ --fix"
   },
