--- a/packages/serverless/firebase/emulator/startFirebaseEmulator/package.json
+++ b/packages/serverless/firebase/emulator/startFirebaseEmulator/package.json
@@ -17,7 +17,7 @@
     "firebase": "^9.6.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "1.1.6",
+    "@useweb/compiler": "latest",
     "firebase": "^9.6.0"
   }
 }
