--- a/packages/feedback/progress/dots/package.json
+++ b/packages/feedback/progress/dots/package.json
@@ -16,7 +16,7 @@
     "react": "^17.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "1.1.6",
+    "@useweb/compiler": "latest",
     "styled-components": "^5.3.3"
   }
 }
