--- a/packages/utils/scrolling/preventBodyScroll/package.json
+++ b/packages/utils/scrolling/preventBodyScroll/package.json
@@ -16,7 +16,7 @@
     "react": "^17.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "1.1.6"
+    "@useweb/compiler": "latest"
   },
   "dependencies": {
     "@useweb/dom": "^1.0.0"
