--- a/packages/utils/string/removeLastCharacter/package.json
+++ b/packages/utils/string/removeLastCharacter/package.json
@@ -13,6 +13,6 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "devDependencies": {
-    "@useweb/compiler": "1.1.6"
+    "@useweb/compiler": "latest"
   }
 }
