--- a/packages/serverless/firebase/messaging/useFirebaseMessaging/package.json
+++ b/packages/serverless/firebase/messaging/useFirebaseMessaging/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@useweb/use-firebase",
-  "version": "3.1.0",
+  "name": "@useweb/use-firebase-messaging",
+  "version": "1.0.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -14,12 +14,10 @@
   },
   "peerDependencies": {
     "react": "^17.0.0",
-    "@useweb/use-local-storage": "^1.1.0",
-    "firebase": "^9.6.0"
+    "@useweb/use-firebase": "^3.0.0"
   },
   "devDependencies": {
     "@useweb/compiler": "latest",
-    "@useweb/use-local-storage": "^1.1.0",
-    "firebase": "^9.6.0"
+    "@useweb/use-firebase": "^3.1.0"
   }
 }
