--- a/packages/serverless/firebase/useFirebase/package.json
+++ b/packages/serverless/firebase/useFirebase/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/use-firebase",
-  "version": "3.1.0",
+  "version": "3.1.3",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@useweb/compiler": "latest",
+    "@useweb/use-firebase-messaging": "^1.0.1",
     "@useweb/use-local-storage": "^1.1.0",
     "firebase": "^9.6.0"
   }
