--- a/packages/serverless/firebase/messaging/useFirebaseMessaging/package.json
+++ b/packages/serverless/firebase/messaging/useFirebaseMessaging/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@useweb/compiler": "latest",
-    "@useweb/use-firebase": "^3.1.3"
+    "@useweb/use-firebase": "^4.0.1",
+    "firebase": "^9.6.0"
   }
 }
