--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@storybook/addon-essentials": "^6.4.8",
     "@storybook/addon-links": "^6.4.8",
     "@storybook/react": "^6.4.8",
+    "@tippyjs/react": "^4.2.6",
     "babel-loader": "^8.2.3",
     "dotenv-parse-variables": "^2.0.0",
     "eslint": "^7.26.0",
@@ -35,6 +36,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "lerna": "^4.0.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
