--- a/firebase.json
+++ b/firebase.json
@@ -1,15 +1,15 @@
 {
+  "functions": {
+    "source": "firebase/functions",
+    "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build"
+  },
   "firestore": {
     "rules": "firebase/firestore.rules",
     "indexes": "firebase/firestore.indexes.json"
   },
   "hosting": {
     "public": "devtools/storybook/build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   },
   "storage": {
     "rules": "firebase/storage.rules"
@@ -32,6 +32,9 @@
     },
     "ui": {
       "enabled": true
+    },
+    "storage": {
+      "port": 9199
     }
   }
 }
