--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "functions",
+  "name": "useweb-functions",
+  "private": true,
   "scripts": {
-    "build": "tsc",
-    "serve": "npm run build && firebase emulators:start --only functions",
-    "shell": "npm run build && firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "build": "node scripts/buildFunctions/run.js",
+    "build:watch": "node scripts/buildFunctions/run.js --watch",
+    "dev": "firebase emulators:start --only functions",
+    "deploy": "firebase deploy --only functions"
   },
   "engines": {
     "node": "14"
   },
-  "main": "lib/index.js",
+  "main": "build/index.js",
   "dependencies": {
+    "command-line-args": "^5.2.0",
+    "esbuild": "^0.14.2",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1"
   },
   "devDependencies": {
     "typescript": "^3.8.0",
     "firebase-functions-test": "^0.2.0"
-  },
-  "private": true
+  }
 }
