--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "dev:with-firebase-emulators": "concurrently 'npm run dev' 'npm run functions:build:watch' 'npm run functions:serve'",
     "dev:refresh-storiesList": "node --loader ts-node/esm ./scripts/dev/run.ts --refresh-stories-list",
     "functions:dev": "concurrently 'npm run functions:build:watch' 'npm run functions:serve'",
-    "functions:build": "node firebase/functions/scripts/buildFunctions/run.js",
-    "functions:build:watch": "node firebase/functions/scripts/buildFunctions/run.js --watch",
+    "functions:build": "node --loader ts-node/esm firebase/functions/scripts/buildFunctions/run.js",
+    "functions:build:watch": "node --loader ts-node/esm firebase/functions/scripts/buildFunctions/run.js --watch",
     "functions:serve": "firebase emulators:start --only functions",
     "functions:deploy": "firebase deploy --only functions",
     "build": "node --loader ts-node/esm ./scripts/buildApp/run.ts",
