--- a/packages/node/removeFolder/package.json
+++ b/packages/node/removeFolder/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.3",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
-  "types": "./src/index/index.d.ts",
+  "types": "./build/types/index.d.ts",
   "type": "module",
   "files": [
     "build"
