--- a/packages/serverless/firebase/useFirebase/package.json
+++ b/packages/serverless/firebase/useFirebase/package.json
@@ -3,7 +3,7 @@
   "version": "4.1.1",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
-  "types": "./src/index/index.d.ts",
+  "types": "./build/types/index.d.ts",
   "files": [
     "build"
   ],
