--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "functions:deploy": "firebase deploy --only functions",
     "build": "node --loader ts-node/esm ./scripts/buildApp/run.ts",
     "lerna:link": "lerna link",
-    "lerna:install-deps": "lerna exec npm i",
+    "lerna:install-deps": "lerna exec npm i --no-bail",
+    "lerna:minor-update": "lerna exec npm i && npm version minor && npm publish",
     "deploy": "node --loader ts-node/esm ./scripts/deploy/run.ts",
     "prettify": "node --loader  ts-node/esm ./devtools/prettier/scripts/runPrettier/runPrettier.ts",
     "lint": "eslint ./ --fix"
