--- a/packages/ambient/Particles/package.json
+++ b/packages/ambient/Particles/package.json
@@ -16,7 +16,7 @@
     "react": "^17.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "latest"
+    "@useweb/compiler": "^1.3.0"
   },
   "dependencies": {
     "react-particles-js": "^3.6.0",
