--- a/packages/data/useData/package.json
+++ b/packages/data/useData/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@useweb/array-db": "^0.2.2",
-    "@useweb/compiler": "latest",
+    "@useweb/compiler": "^1.3.0",
     "@useweb/use-async": "^0.3.3",
     "@useweb/use-local-storage": "^1.1.0",
     "swr": "^1.1.0",
