--- a/packages/data/useLocalStorage/package.json
+++ b/packages/data/useLocalStorage/package.json
@@ -17,7 +17,7 @@
     "swr": "^1.1.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "latest",
+    "@useweb/compiler": "^1.3.0",
     "swr": "^1.1.0"
   }
 }
