--- a/packages/dataDisplay/Box/package.json
+++ b/packages/dataDisplay/Box/package.json
@@ -18,7 +18,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@useweb/compiler": "latest",
+    "@useweb/compiler": "^1.3.0",
     "@useweb/style-system": "^0.1.3",
     "styled-components": "^5.3.3"
   }
