--- a/packages/dataDisplay/Icon/package.json
+++ b/packages/dataDisplay/Icon/package.json
@@ -17,7 +17,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@useweb/compiler": "latest",
+    "@useweb/compiler": "^1.3.0",
     "styled-components": "^5.3.3"
   }
 }
