--- a/packages/dataDisplay/Text/package.json
+++ b/packages/dataDisplay/Text/package.json
@@ -16,7 +16,7 @@
     "react": "^17.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "latest",
+    "@useweb/compiler": "^1.3.0",
     "@useweb/decamelize": "^0.1.1",
     "@useweb/remove-duplicates-from-array": "^0.1.1",
     "@useweb/style-system": "^0.1.3",
