--- a/packages/feedback/Modal/package.json
+++ b/packages/feedback/Modal/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "@useweb/animate": "^1.0.4",
     "@useweb/box": "^1.1.0",
-    "@useweb/compiler": "latest",
+    "@useweb/compiler": "^1.3.0",
     "@useweb/decamelize": "^0.1.1",
     "@useweb/on-swipe": "^1.0.0",
     "@useweb/overlay": "^1.0.1",
