--- a/packages/input/Button/package.json
+++ b/packages/input/Button/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@useweb/animate": "^1.0.3",
-    "@useweb/compiler": "latest",
+    "@useweb/compiler": "^1.3.0",
     "@useweb/decamelize": "^0.1.1",
     "@useweb/on-swipe": "^1.0.0",
     "@useweb/progress-dots": "^1.0.0",
