--- a/packages/navigation/Link/package.json
+++ b/packages/navigation/Link/package.json
@@ -17,7 +17,7 @@
     "@useweb/box": "^1.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "1.1.6",
-    "@useweb/box": "^1.0.0"
+    "@useweb/box": "^1.0.0",
+    "@useweb/compiler": "^1.3.0"
   }
 }
