--- a/packages/serverless/firebase/emulator/startFirebaseEmulator/package.json
+++ b/packages/serverless/firebase/emulator/startFirebaseEmulator/package.json
@@ -17,7 +17,7 @@
     "firebase": "^9.6.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "latest",
+    "@useweb/compiler": "^1.3.0",
     "firebase": "^9.6.0"
   }
 }
