--- a/packages/serverless/firebase/firestore/useFirestore/package.json
+++ b/packages/serverless/firebase/firestore/useFirestore/package.json
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "@useweb/array-db": "0.0.1",
-    "@useweb/compiler": "latest",
+    "@useweb/compiler": "^1.3.0",
     "@useweb/use-async": "^0.3.2",
     "@useweb/use-firebase": "^2.3.0",
     "@useweb/use-local-storage": "^1.1.0",
