--- a/packages/serverless/firebase/functions/firebase/useFirebaseFunction/package.json
+++ b/packages/serverless/firebase/functions/firebase/useFirebaseFunction/package.json
@@ -19,7 +19,7 @@
     "firebase": "^9.6.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "latest",
+    "@useweb/compiler": "^1.3.0",
     "@useweb/use-async": "^0.3.3",
     "@useweb/use-firebase": "^6.0.1",
     "firebase": "^9.6.0"
