--- a/packages/serverless/firebase/messaging/useFirebaseMessaging/package.json
+++ b/packages/serverless/firebase/messaging/useFirebaseMessaging/package.json
@@ -17,7 +17,7 @@
     "@useweb/use-firebase": "^6.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "latest",
+    "@useweb/compiler": "^1.3.0",
     "@useweb/use-firebase": "^6.0.0",
     "firebase": "^9.6.0"
   }
