--- a/packages/theme/styleSystem/package.json
+++ b/packages/theme/styleSystem/package.json
@@ -18,7 +18,7 @@
     "@useweb/decamelize": "^0.1.1"
   },
   "devDependencies": {
-    "@useweb/compiler": "latest",
+    "@useweb/compiler": "^1.3.0",
     "@useweb/decamelize": "^0.1.1",
     "@useweb/remove-duplicates-from-array": "^0.1.1"
   }
