--- a/packages/utils/array/arrayDB/package.json
+++ b/packages/utils/array/arrayDB/package.json
@@ -13,6 +13,6 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "devDependencies": {
-    "@useweb/compiler": "latest"
+    "@useweb/compiler": "^1.3.0"
   }
 }
