updated ts and esbuild in compiler

--- a/packages/utils/browser/pullToRefresh/usePullToRefresh/package.json
+++ b/packages/utils/browser/pullToRefresh/usePullToRefresh/package.json
@@ -16,7 +16,7 @@
     "react": "^17.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "latest",
+    "@useweb/compiler": "^1.4.0",
     "mobile-pull-to-refresh": "^0.2.2"
   }
 }
