--- a/packages/serverless/firebase/auth/useFirebaseAuth/package.json
+++ b/packages/serverless/firebase/auth/useFirebaseAuth/package.json
@@ -16,7 +16,7 @@
     "react": "^17.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "latest",
+    "@useweb/compiler": "^1.4.0",
     "firebase": "^9.6.0",
     "zustand": "^3.7.1"
   },
